Bug 330252 - The active tab should be visually distinguished
Summary: The active tab should be visually distinguished
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 2.11.3
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-21 15:19 UTC by paul
Modified: 2016-03-10 12:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description paul 2014-01-21 15:19:14 UTC
+++ This bug was initially created as a clone of Bug #264180 +++

Version:           2.5 (using KDE 4.5.1)  [note: problem persists in 2.11.*]
OS:                Linux

Many users of Konsole have loads of tabs open simultaneously.  In such cases it is very hard to find the active tab because it's not visually distinguished from the others.  It is a major productivity blocker for me which wastes minutes of my life on a daily basis.

I suggest changing the background color of the active tab and/or making its text bold.  It should be a very easy fix that would tremendously improve the productivity of power users like me.


Reproducible: Always
Comment 1 paul 2014-01-21 15:29:47 UTC
Bug #264180 (https://bugs.kde.org/show_bug.cgi?id=264180) has a good discussion of the issue; it was unfortunately posted against the Oxygen theme, not konsole itself.

konsole really needs a way to make the inactive tabs more distinguishable, whether that is a change in color, font characteristics (bold, italics, sizing), or size. I believe it needs to be independent of the theme, for a couple of reasons. First, it's entirely possible that a theme suits a user perfectly except for konsole, where the active tab needs to be more distinct. Second, there are people like me who use konsole outside of the KDE environment (in my case, in xfce4), and adjusting the style is more problematic (read: impossible, as far as I've found).

FYI, my usage pattern (my "user story") is to open a new konsole window for each project I'm working on (building and testing puppet modules, schlepping files for a user, whatever), and have multiple tabs within that window. Eg. one tab is the puppetmaster, one is a client, one is another client, etc.
Comment 2 Rick 2014-01-22 05:01:13 UTC
Adding my 2 cents here too - this is really something that should be fixed.  I also have a lot of trouble quickly distinguishing which tab is active.  I usually end up using shift-left / shift-right to pick up the movement to spot it because it's faster than staring at it for several seconds.
Comment 3 paul 2014-01-27 20:10:45 UTC
This is somewhere between a workaround and an outright fix. Konsole uses a QT stylesheet, and can be told to use an arbitrary one. 
cat tab.qss
QTabBar::tab:selected, QTabBar::tab:hover {
     background: #EE4444;
 }

 QTabBar::tab:selected {
     border-color: #33FF33;
     border-bottom-color: #C2C7CB; /* same as pane color */
 }


konsole --stylesheet tab.qss
Comment 4 Kurt Hindenburg 2014-01-28 04:14:19 UTC
Yes, I had some code earlier that did the same as comment #3.  The issue is how to let the user change it.  If they use a different KDE theme/scheme, it code would need changed.
Comment 5 Kurt Hindenburg 2014-01-28 04:22:50 UTC
Well what I meant is unless you want to use the command-line; there needs to be a way to save/load the given css code.

The css I used earlier was in the actual .cpp code.
Comment 6 paul 2014-01-28 13:49:43 UTC
I'm with you, Kurt. I just wanted to make sure that if someone hit this page looking for a solution, there was *something* they could use.
Comment 7 Kurt Hindenburg 2014-02-08 17:13:22 UTC
If anyone compiles Konsole from source, you might try out https://git.reviewboard.kde.org/r/115554/

I'll try to get it in for KDE 4.13
Comment 8 Kurt Hindenburg 2014-02-09 17:06:52 UTC
Git commit da9331e0e9bb012939fbec4289a796c99701c572 by Kurt Hindenburg.
Committed on 09/02/2014 at 16:45.
Pushed by hindenburg into branch 'master'.

Allow users to specify css file for tab bar style

Currently, the default stylesheet for the tab bar just sets the min
and max width.  Now the user can load a .css file.  It is up to the
user to generate the css file to their liking.  Handbook documentation
and examples will follow.

This can be used to set minimum width of the tabs, distinguish active
tab, etc...
Related: bug 330558, bug 330556
FEATURE:
REVIEW: 115554
FIXED-IN: 2.13

M  +29   -1    src/MainWindow.cpp
M  +1    -0    src/MainWindow.h
M  +33   -11   src/settings/TabBarSettings.ui
M  +8    -0    src/settings/konsole.kcfg

http://commits.kde.org/konsole/da9331e0e9bb012939fbec4289a796c99701c572
Comment 9 Kurt Hindenburg 2014-02-10 14:29:33 UTC
Git commit 19ceea24f3275326f91cc475e5b63e9283b78481 by Kurt Hindenburg.
Committed on 09/02/2014 at 16:45.
Pushed by hindenburg into branch 'frameworks'.

Allow users to specify css file for tab bar style

Currently, the default stylesheet for the tab bar just sets the min
and max width.  Now the user can load a .css file.  It is up to the
user to generate the css file to their liking.  Handbook documentation
and examples will follow.

This can be used to set minimum width of the tabs, distinguish active
tab, etc...
Related: bug 330558, bug 330556
FEATURE:
REVIEW: 115554
FIXED-IN: 2.13

(cherry picked from commit da9331e0e9bb012939fbec4289a796c99701c572)

M  +29   -1    src/MainWindow.cpp
M  +1    -0    src/MainWindow.h
M  +33   -11   src/settings/TabBarSettings.ui
M  +8    -0    src/settings/konsole.kcfg

http://commits.kde.org/konsole/19ceea24f3275326f91cc475e5b63e9283b78481
Comment 10 Pedro Alves 2016-03-01 12:21:08 UTC
Hi!

Was the fix lost somewhere along the road?  

I've finally updated from F20 to F23, which meant I finally upgrading from kde4 to kde5 (konsole 15.12.1), and I'm not finding where can one load a css.
Comment 11 Pedro Alves 2016-03-10 12:27:57 UTC
Can this be reopened?  I can't seem to find a way to change the bug status.  (Probably my account doesn't have the necessary permissions.)